--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <version>4.7</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/jgrapht/jgrapht -->
+        <dependency>
+            <groupId>jgrapht</groupId>
+            <artifactId>jgrapht</artifactId>
+            <version>0.8.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
