Added constructor for MyVertex

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
             <artifactId>functionaljava</artifactId>
             <version>4.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
     </dependencies>
 
