--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <artifactId>akka-actor_2.11</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
+
 
     </dependencies>
 
