--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>gs-ui</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>0.1</version>
+        </dependency>
 
 
 
