--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,21 @@
             <artifactId>jmh-core</artifactId>
             <version>0.1</version>
         </dependency>
-
-
-
-
+        <dependency>
+            <groupId>net.sourceforge.argparse4j</groupId>
+            <artifactId>argparse4j</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.2</version>
+        </dependency>
     </dependencies>
 
     <build>
