--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,19 @@
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/de.sciss/weblaf -->
+        <dependency>
+            <groupId>de.sciss</groupId>
+            <artifactId>weblaf</artifactId>
+            <version>2.1.3</version>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.sciss</groupId>
+            <artifactId>weblaf-ui</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
 
     </dependencies>
