--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,12 @@
             <artifactId>akka-actor_2.11</artifactId>
             <version>2.5.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
 
     </dependencies>
 
