--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
         <resources>
             <resource>
                 <filtering>false</filtering>
+                <directory>${basedir}</directory>
+                <includes>
+                    <include>*.css</include>
+                </includes>
+            </resource>
+            <resource>
+                <filtering>false</filtering>
                 <directory>${basedir}/sigar-bin/slib</directory>
                 <includes>
                     <include>*.*</include>
