--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,14 @@
             </resource>
             <resource>
                 <filtering>false</filtering>
+                <directory>${basedir}/src/main/java/GUI/Frame/view</directory>
+                <includes>
+                    <include>*.css</include>
+                    <include>*.fxml</include>
+                </includes>
+            </resource>
+            <resource>
+                <filtering>false</filtering>
                 <directory>${basedir}/sigar-bin/slib</directory>
                 <includes>
                     <include>*.*</include>
