--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -96,17 +96,17 @@
             <version>8u76-b04</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/eu.hansolo/Medusa -->
-		<dependency>
-    		<groupId>eu.hansolo</groupId>
-    		<artifactId>Medusa</artifactId>
-    		<version>5.7</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
-		<dependency>
-  		  <groupId>com.jfoenix</groupId>
-  		  <artifactId>jfoenix</artifactId>
-  		  <version>1.7.0</version>
-		</dependency>
+        <dependency>
+            <groupId>eu.hansolo</groupId>
+            <artifactId>Medusa</artifactId>
+            <version>5.7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>1.7.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.fusesource/sigar -->
         <dependency>
             <groupId>org.fusesource</groupId>
